- Added 3 fragments support for News/Scores/Series - Added WebActivity for News - Changed theme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Cricket</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Scores</string>
+    <string name="title_section2">News</string>
+    <string name="title_section3">Series</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="news_title">News</string>
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_nav">Cricket</string>
