Make UI consistent across all 3 fragments Add initial Series Activity code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="scores">SCORES</string>
     <string name="news">NEWS</string>
     <string name="series">SERIES</string>
+    <string name="title_activity_series">SeriesActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
